<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.DetailActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/BoldStyle"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name"
            android:textSize="24sp" />

        <TextView
            style="@style/BoldStyle"
            android:text="@string/address" />

        <TextView
            style="@style/BoldStyle"
            android:text="@string/phone" />

        <TextView
            style="@style/BoldStyle"
            android:text="@string/mail" />

        <TextView
            style="@style/BoldStyle"
            android:text="@string/birthday" />

        <TextView
            style="@style/BoldStyle"
            android:text="@string/web" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <EditText
            android:id="@+id/editText_name"
            style="@style/userInput"
            android:hint="@string/peter_parker"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText_address"
            style="@style/userInput"
            android:hint="@string/nyc"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editText_phone"
            style="@style/userInput"
            android:hint="@string/_123456"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            style="@style/userInput"
            android:hint="@string/peter_avengers"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextDate"
            style="@style/userInput"
            android:hint="@string/dec_28_1995"
            android:inputType="date" />

    </LinearLayout>

    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/home"
        app:layout_constraintEnd_toStartOf="@+id/button_show"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/show"
        app:layout_constraintBottom_toBottomOf="@+id/button_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_home"
        app:layout_constraintTop_toTopOf="@+id/button_home" />

    <ImageButton
        android:id="@+id/imageButton_delete"
        android:layout_width="85dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_save"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/imageButton_save"
        android:layout_width="238dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton_delete"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/imageButton_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="106dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout_info"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onClickCall"
        app:srcCompat="@drawable/ic_baseline_phone_24" />

    <ImageButton
        android:id="@+id/imageButton_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout_info"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_call"
        app:srcCompat="@drawable/ic_baseline_email_24" />

    <ImageButton
        android:id="@+id/imageButton_camera"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:onClick="onClickCam"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_home"
        app:srcCompat="@drawable/ic_baseline_photo_camera_24" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="0dp">

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>